--- a/rag.ipynb
+++ b/rag.ipynb
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "cde81211",
    "metadata": {},
    "outputs": [],
@@ -1780,10 +1780,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fe79d5e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    reasoning='The Command + Tab shortcut on macOS is designed to switch between applications that are currently open and visible on the screen. However, it does not work with minimized or hidden windows because these applications are not actively running in the foreground. When an application is minimized, it is not considered \"open\" in the same way as an application that is currently displayed on the screen. Therefore, the Command + Tab function will not cycle through minimized applications. To switch to a minimized application, you would typically need to either click on its icon in the Dock or use a different keyboard shortcut that specifically targets minimized windows.',\n",
+       "    response='The Command + Tab shortcut on macOS is intended for switching between applications that are currently open and visible. It does not work with minimized or hidden windows because these applications are not actively running in the foreground. When an application is minimized, it is not considered \"open\" in the same sense as those displayed on the screen. To access a minimized application, you can either click its icon in the Dock or use a different method, such as the Mission Control feature, to view all open windows, including minimized ones.'\n",
+       ")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "optimized_rag.save(\"optimized_rag.json\")\n",
     "\n",
@@ -1792,6 +1806,14 @@
     "\n",
     "loaded_rag(question=\"cmd+tab does not work on hidden or minimized windows\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01350ac4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
